# experiments-lanczos-adjoints

./: .gitignore  .pre-commit-config.yaml  Makefile  NONAME_21705221.out  README.md  gp_jax-21719183.err  gp_jax-21719183.out  gp_jax-40x-21728410.err  gp_jax-40x-21728410.out  pyproject.toml
.ssgetpy/: index.db
.ssgetpy/MAT/HB/: 685_bus.mat  bcsstk06.mat
bash_scripts/benchmarks/: gram_matvec_vs_keops.sh
bash_scripts/gaussian_processes/: train_gp.sh
bash_scripts/partial_differential_equation/: tune_wave.sh
data/: workprecision_custom_vjp.npy  workprecision_dense_custom_vjp.npy  workprecision_dense_reference.npy  workprecision_reference.npy
data/archive/stability/: custom_vjp.npy  reference.npy
data/archive/tridiag_custom_vjp/: krylov_depths.npy  norms_of_differences.npy  t3dl_e_times_custom.npy  t3dl_e_times_fwdpass.npy  times_custom.npy  times_fwdpass.npy
data/lanczos_adjoints/measure_vjp_wall_time_for_a_sparse_matrix/: t3dl_e_norms_of_differences.npy  t3dl_e_times_autodiff.npy  t3dl_e_times_custom.npy  t3dl_e_times_fwdpass.npy
data/matrices/ash331/: ash331.mtx
data/matrices/ash608/: ash608.mtx
data/matrices/bcsstk10/: bcsstk10.mtx
data/matrices/bcsstk11/: bcsstk11.mtx
data/matrices/bcsstm09/: bcsstm09.mtx
data/matrices/bcsstm11/: bcsstm11.mtx
data/matrices/bcsstm21/: bcsstm21.mtx
data/matrices/bcsstm23/: bcsstm23.mtx
data/pde_wave/: 16x16_data_inputs.npy  16x16_data_parameter.npy  16x16_data_targets.npy
data/tridiag_custom_vjp/: t3dl_e_krylov_depths.npy  t3dl_e_norms_of_differences.npy  t3dl_e_times_autodiff.npy  times_autodiff.npy
data/uci_mat/: buzz.mat  houseelectric.mat  song.mat
experiments/: logdet_of_dense_matrix_work_precision.py  logdet_of_dense_matrix_work_precision_plot.py  logdet_of_diagonal_matrix.py  logdet_of_rolling_operator.py  logdet_of_sparse_matrix.py  logdet_of_sparse_matrix_work_precision.py  logdet_of_sparse_matrix_work_precision_plot.py  logdet_work_precision.py  logdet_work_precision_plot.py  sparse_matrix.py  suite_sparse_download.py
experiments/_archive/: logdet_of_diagonal_matrix.py
experiments/archive/: logdet_of_diagonal_matrix.py  logdet_of_sparse_matrix.py
experiments/benchmark_gram_matvec_vs_keops/: benchmark.py  check_the_efficient_vjp_with_kernel_matrices.py  plot.py
experiments/misc/: suite_sparse.py
experiments/playground/: benchmark_keops_versus_batched_gram.py  calibrate_a_gaussian_process.py  check_the_efficient_vjp_with_kernel_matrices.py  create_directory_matching_hierarchy.py  debug_lanczos_autodiff_via_identity_operator.py  demonstrate_symmetry_of_lanczos_process.py  differentiate_complex_matrices.py  display_variance_of_trace_of_inv.py  experiment_with_jvp_monte_carlo.py  experiment_with_monte_carlo_jvp.py  explore_new_approach.py  explore_very_new_approach.py  implement_adjoint_of_lanczos.py  implement_adjoint_of_lanczos_process.py  import_more_uci_datasets.py  invert_triangular_matrix.py  look_at_adjoint_orthogonality.py  make_gpytorch_train_something.py  plot_pde_solution_via_matrix_exponential.py  plot_spy_suite_sparse.py  process_uci_datasets.py  reverse_arnoldi_process.py  trace_memory_demands_of_grad.py
experiments/stability/: demonstrate.py  plot.py
experiments/tridiag_custom_vjp/: benchmark.py  measure_vjp_wall_time_for_a_sparse_matrix.py  plot.py
results/benchmark_gram_matvec_vs_keops/: Ns.npy  ts_bwd.npy  ts_bwd_ad.npy  ts_bwd_checkpt.npy  ts_bwd_custom.npy  ts_fwd.npy
scripts/: benchmark_matvec_vs_keops.sh  benchmark_vjp.sh
scripts/benchmarks/: benchmark_matvec.sh  vjp_through_lanczos_arnoldi.sh
scripts/gaussian_processes/: optim_logml_uci_adjoints_vs_gpytorch.sh  run_uci.sh  train_gp.sh
scripts/partial_differential_equation/: tune_wave.sh
src/: matfree_extensions.py
src/matfree_extensions/: arnoldi.py  bijection.py  bnn_util.py  cg.py  data_util.py  deprecated.py  exp_util.py  gp.py  hutchinson.py  lanczos.py  low_rank.py  matfree_extensions.py  slq.py  test_util.py
tests/: test_bijection.py  test_deprecated.py  test_hutchinson.py  test_lanczos.py  test_matfree_extensions.py  test_slq.py
tests/test_arnoldi/: test_adjoint.py  test_forward.py  test_hessenberg.py  test_hessenberg_adjoint.py  test_hessenberg_forward.py  test_vjp.py
tests/test_cg/: test_cg.py
tests/test_gp/: test_gpytorch_kernels.py  test_gpytorch_mll.py  test_kernel.py  test_likelihood.py
tests/test_lanczos/: test_integrand_spd_value_and_grad.py  test_matrix_adjoint.py  test_matrix_forward.py  test_matrix_versions.py  test_slq_custom_vjp.py  test_slq_integrand_spd.py  test_tridiag.py  test_tridiag_adaptive.py  test_tridiag_adjoint.py  test_tridiag_autodiff.py  test_tridiag_autodiff_identity.py  test_tridiag_autodiff_vjp.py  test_tridiag_forward.py  test_tridiag_no_reortho.py  test_tridiag_vjp.py
tests/test_low_rank/: test_low_rank.py
(+2447 files in other folders)
