[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "matfree_extensions"
authors = [
  { name="Nicholas Krämer", email="pekra@dtu.dk" },
]
version = "0.0.1"
description = "Extensions for the Matfree package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default


[tool.isort]
multi_line_output = "3"
include_trailing_comma = "true"
force_grid_wrap = "0"
use_parentheses = "true"
line_length = "88"

[tool.black]
line-length = "88"
