[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "matfree_extensions"
version = "0.0.1"

dependencies = [
    "matfree",
]


[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cases",
]
uci = [
    "ucimlrepo",
    "pandas",
]
suite_sparse = [
    "ssgetpy",
]
experiments = [
    "jaxopt",
    "matplotlib",
    "tueplots",
    "optax",
]


[tool.ruff]
include = ["**.py", "**/pyproject.toml", "**.ipynb"]

[tool.ruff.lint]
# See: https://beta.ruff.rs/docs/rules/
select = [
    # pycodestyle (warning, error)
    "W",
    "E",
    # Pyflakes:
    "F",
    # pyupgrade:
    "UP",
    # flake8-bugbear:
    "B",
    # flake8-builtins:
    "A",
    # flake8-import-conventions:
    "ICN",
    # flake8-pytest-style:
    "PT",
    # flake8-quotes:
    "Q",
    # flake8-return:
    "RET",
    # flake8-simplify:
    "SIM",
    # flake8-unused-arguments:
    "ARG",
    # Ruff-specific rules:
    "RUF",
    # isort:
    "I",
    # flake8-errormsg:
    "EM",
    # tryceratops:
    "TRY",
]
ignore = [
    # warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D203",
    # warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
    "D213",
    # zip(..., strict=True/False) is not supported on Python < 3.10
    "B905",
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
# Prefer single quotes over double quotes.
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
