[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "matfree_extensions"
version = "0.0.1"
dependencies = [
    # Ensure that JAX is installed:
    "matfree",
]





[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cases",
    "pytest-xdist",
    # Ensure that PyTorch is installed:
    # https://pytorch.org/
    # and ensure that JAX is installed:
    # https://jax.readthedocs.io/en/latest/installation.html
    "gpytorch",
]
experiments = [
    # Ensure that PyTorch is installed:
    # https://pytorch.org/
    # and ensure that JAX is installed:
    # https://jax.readthedocs.io/en/latest/installation.html
    "gpytorch",
    "pykeops",
    "ucimlrepo",  # UCI datasets
    "pandas",
    "ssgetpy",  # SuiteSparse set
    "jaxopt",
    "jax-models",
    "matplotlib",
    "tueplots",
    "optax",
    "flax",
    "jinja2",  # for pandas.DataFrame.to_latex()
    "laplace-torch",
    "tree-math",
]


[tool.ruff]
include = ["**.py", "**/pyproject.toml", "**.ipynb"]

[tool.ruff.lint]
# See: https://beta.ruff.rs/docs/rules/
select = [
    # pycodestyle (warning, error)
    "W",
    "E",
    # Pyflakes:
    "F",
    # pyupgrade:
    "UP",
    # flake8-bugbear:
    "B",
    # flake8-builtins:
    "A",
    # flake8-import-conventions:
    "ICN",
    # flake8-pytest-style:
    "PT",
    # flake8-quotes:
    "Q",
    # flake8-return:
    "RET",
    # flake8-simplify:
    "SIM",
    # flake8-unused-arguments:
    "ARG",
    # Ruff-specific rules:
    "RUF",
    # isort:
    "I",
    # flake8-errormsg:
    "EM",
    # tryceratops:
    "TRY",
]
ignore = [
    # warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D203",
    # warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
    "D213",
    # zip(..., strict=True/False) is not supported on Python < 3.10
    "B905",
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
# Prefer single quotes over double quotes.
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false


[tool.pytest.ini_options]
addopts = "-v -n auto"
testpaths = [
    "tests"
]
